DUN-5 | Создание api для скинов
