# routes/API/skins.php
@@ -1,6 +1,5 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -14,14 +13,6 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
-});
-
-Route::group([
-    'prefix' => 'auth'
-], function () {
-    require __DIR__ . '/API/auth.php';
-});
-
-require __DIR__ . '/API/skins.php';
+Route::resource('skins', 'App\Http\Controllers\API\SkinsController', [
+    'only' => ['index'],
+]);
