# storage/api-docs/api-docs.json
@@ -94,9 +94,66 @@
                     }
                 ]
             }
+        },
+        "/api/skins": {
+            "get": {
+                "tags": [
+                    "Skins"
+                ],
+                "summary": "Скины",
+                "description": "Скины",
+                "operationId": "App\\Http\\Controllers\\API\\SkinsController::index",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Skin"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
+        "schemas": {
+            "Skin": {
+                "properties": {
+                    "id": {
+                        "description": "ID",
+                        "type": "integer",
+                        "readOnly": true
+                    },
+                    "name": {
+                        "description": "Назавние",
+                        "type": "string",
+                        "readOnly": true
+                    },
+                    "rating": {
+                        "description": "Рейтинг",
+                        "type": "integer",
+                        "readOnly": true
+                    },
+                    "skin": {
+                        "description": "Скин",
+                        "type": "string",
+                        "readOnly": true
+                    }
+                },
+                "type": "object"
+            }
+        },
         "securitySchemes": {
             "bearer": {
                 "type": "http",
